# grobot

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  cwconfig.json  grobot  package-lock.json  package.json
runtime/: Cargo.toml  README.md
runtime/src/: cwconfig.json  main.rs  protocol.rs
runtime/src/extensions/: contracts.rs  handler.rs  protocol.rs  request_envelope.rs  response.rs  tests.rs  turn_known_fields.rs  turn_params.rs
runtime/src/extensions/domains/: contracts.rs  handler.rs  tests.rs
runtime/src/extensions/tests/: request_envelope.rs  turn_params.rs  turn_unknown_fields.rs
runtime/src/governance/: config.rs  session.rs
runtime/src/governance/domains/: bootstrap.rs
runtime/src/models/: config.rs  contracts.rs  engine.rs  executor.rs  model.rs  response.rs  tests.rs  tooling.rs
runtime/src/models/domains/: config.rs  contracts.rs  executor.rs  response.rs  tests.rs  tooling.rs
runtime/src/models/executor/: ask_user_interrupt.rs  kimi_attachments.rs  kimi_stream.rs  kimi_transport.rs  message_builder.rs  prompt_cache.rs  tool_telemetry.rs
runtime/src/models/tests/: content_prompt.rs  fallback_and_tool_errors.rs  http_retry.rs  kimi_tooling.rs  prompt_cache_executor.rs  tool_context_config.rs  tool_output_budget.rs
runtime/src/orchestration/: entrypoint.rs  orchestrator.rs  pipeline.rs  tests.rs
runtime/src/orchestration/domains/: entrypoint.rs  pipeline.rs  tests.rs
runtime/src/tools/: recovery.rs  tests.rs  text_format.rs  tools.rs
runtime/src/tools/bash/: allowlist.rs  args.rs  entry.rs  exec.rs  mod.rs  policy.rs  policy_git.rs  (+6 more)
(+1411 files in other folders)
