[package]
name = "grobot-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
regex = "1"
walkdir = "2"
globset = "0.4"
toml = "0.8"
unicode-normalization = "0.1"
libc = "0.2"
